extras/Kubernetes/network-policies/users-app-network-policies.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-users
  namespace: training
spec:
  podSelector:
    matchLabels:
      app-name: users
  policyTypes:
    - Ingress
  ingress:
    - from:
        # Allow from any IP (0.0.0.0/0)
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 3000
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-users-to-postgres
  namespace: training
spec:
  podSelector:
    matchLabels:
      app-name: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        # Only pods labeled app-name=users may connect
        - podSelector:
            matchLabels:
              app-name: users
      ports:
        - protocol: TCP
          port: 5432
